# keycast

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  prek.toml  pyproject.toml
.github/: release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/: API.md  ARCHITECTURE.md  COMPARISON.md  DESIGN_DECISIONS.md  PACKAGING.md  PROJECT_OVERVIEW.md  README.md
docs/adr/: 001-desktop-app-packaging.md  002-update-check.md  003-self-update.md  004-update-check-build-vs-buy.md  004-updates-package-structure.md  005-updates-package-structure.md  006-windows-installer.md  007-click-ripple.md  007-prerelease-release-channels.md  008-scoop-bucket.md  009-microsoft-store.md  010-click-ripple.md  010-macos-signing-notarization.md  011-mac-app-store.md  012-click-ripple.md  013-macos-signing-notarization.md  014-mac-app-store.md  015-secure-input-masking.md  016-updates-package-stays-in-tree.md
packaging/: dmg_background.tiff  dmg_settings.py  entry.py  keycast.icns  keycast.iss  keycast.spec  make_dmg_background.py  make_icons.py
packaging/msix/: AppxManifest.xml  pack.ps1
src/keycast/: __init__.py  __main__.py  application.py  cli.py  display.py  listeners.py  logging_setup.py  main.py  permissions.py  secure_input.py  settings.py  updates.py
src/keycast/updates/: __init__.py  sources.py  state.py  versions.py
tests/: __init__.py  test_application.py  test_cli.py  test_display.py  test_docs_contract.py  test_listeners.py  test_logging_setup.py  test_main.py  test_secure_input.py  test_settings.py  test_updates.py  test_updates_check.py  test_updates_sources.py  test_updates_state.py  test_updates_versions.py
